src/test/ui/span/issue-11925.stderr
error: `x` does not live long enough
  --> $DIR/issue-11925.rs:18:36
   |
18 |         let f = to_fn_once(move|| &x);
   |                                    ^
   |                                    |
   |                                    does not live long enough
   |                                    borrowed value only valid until here
...
23 | }
   | - borrowed value must be valid until here

error: aborting due to previous error

